<resources>
    <string name="app_name">SportQuiz</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="favourite">favourite</string>
    <string name="result">Result</string>
    <string name="sport_name">Sport Name</string>
    <string name="count_theme">Count Theme</string>
    <string name="popular_game">Popular Game</string>
    <string name="questions">Questions</string>
    <string name="answer1">answer1</string>
    <string name="answer2">answer2</string>
    <string name="answer3">answer3</string>
    <string name="answer4">answer4</string>
    <string name="next_questions">next questions</string>
    <string name="mystery_questions">Mystery questions</string>
    <string name="questions_4_6">questions 4/6</string>
    <string name="text">text</string>
    <string name="restart">restart</string>
    <string name="score">score</string>
    <string name="delete_item">Delete Item</string>
    <string name="are_sure_delete">Are you sure you want to delete this item?</string>
    <string name="cansel">Cancel</string>
    <string name="del">Delete</string>
    <string name="questions_text">Questions:</string>
</resources>