<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tv_questions"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/questions"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_a"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintTop_toBottomOf="@id/tv_questions"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"
        app:cardCornerRadius="26dp"
        android:layout_marginHorizontal="30dp"
        app:cardBackgroundColor="@color/card_bg"

    >

        <LinearLayout
            android:id="@+id/liner_a"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_answer_a"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/answer1"
                android:textColor="@color/white"
                android:textSize="12sp" />

        </LinearLayout>


    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/card_b"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintTop_toBottomOf="@id/card_a"
        app:layout_constraintStart_toStartOf="@id/card_a"
        app:layout_constraintEnd_toEndOf="@id/card_a"
        app:cardCornerRadius="26dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="20dp"
        app:cardBackgroundColor="@color/card_bg"

        >
        <LinearLayout
            android:id="@+id/liner_b"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/tv_answer_b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer2"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="12sp"
                android:textColor="@color/white"

                />

        </LinearLayout>




    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/card_c"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintTop_toBottomOf="@id/card_b"
        app:layout_constraintStart_toStartOf="@id/card_a"
        app:layout_constraintEnd_toEndOf="@id/card_a"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="26dp"
        android:layout_marginHorizontal="30dp"
        app:cardBackgroundColor="@color/card_bg"

        >

        <LinearLayout
            android:id="@+id/liner_c"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/tv_answer_c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer3"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:textSize="12sp"/>


        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_d"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintTop_toBottomOf="@id/card_c"
        app:layout_constraintStart_toStartOf="@id/card_a"
        app:layout_constraintEnd_toEndOf="@id/card_a"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="26dp"
        android:layout_marginHorizontal="30dp"
        app:cardBackgroundColor="@color/card_bg"

        >

    <LinearLayout
        android:id="@+id/liner_d"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/tv_answer_d"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer4"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:textSize="12sp"/>


    </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>