<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_sport"
    tools:context=".fragment.ResultFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/const_1"
            android:layout_width="match_parent"
            android:layout_height="580dp"
            android:background="@drawable/shape_question"
            app:layout_constraintTop_toTopOf="parent"
            >

            <TextView
                android:id="@id/tv_questions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mystery_questions"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="24sp"
                android:layout_marginTop="20dp"/>

            <TextView
                android:id="@id/tv_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/questions_4_6"
                app:layout_constraintTop_toBottomOf="@id/tv_questions"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginEnd="180dp"
                android:textSize="30sp"
                android:layout_marginTop="20dp"/>

            <SeekBar
                android:id="@+id/seek_bar"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                app:layout_constraintTop_toBottomOf="@id/tv_score"
                app:layout_constraintStart_toStartOf="@id/tv_score"
                app:layout_constraintEnd_toEndOf="parent"
                android:progressDrawable="@drawable/custom_seekbar_progress"
                android:layout_marginTop="10dp"
                app:layout_constraintCircleRadius="20dp"
                android:thumb="@android:color/transparent"
                />

            <LinearLayout
                android:id="@+id/linear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/seek_bar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_margin="30dp"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_1"
                    android:layout_width="180dp"
                    android:layout_height="60dp"
                    app:cardCornerRadius="20dp"
                    android:background="@color/card_bg"
                    android:layout_marginEnd="20dp"
                    android:visibility="gone"
                    android:backgroundTint="@color/bg"

                    >

                    <TextView
                        android:id="@+id/tv_1"
                        android:layout_width="170dp"
                        android:layout_height="wrap_content"
                        android:text="zsdasdasd"
                        android:gravity="center"
                        android:textSize="16sp"
                        android:textColor="@color/white"
                        android:layout_gravity="center"/>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_2"
                    android:layout_width="180dp"
                    android:layout_height="60dp"
                    android:backgroundTint="@color/bg"
                    android:visibility="gone"
                    app:cardCornerRadius="20dp">

                    <TextView
                        android:id="@+id/tv_2"
                        android:layout_width="170dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="zsdasdasd"
                        android:textColor="@color/white"
                        android:textSize="16sp" />

                </androidx.cardview.widget.CardView>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/linear"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_margin="20dp"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_3"
                    android:layout_width="180dp"
                    android:layout_height="60dp"
                    app:cardCornerRadius="20dp"
                    android:background="@color/card_bg"
                    android:layout_marginEnd="20dp"
                    android:visibility="gone"
                    android:backgroundTint="@color/bg"

                    >

                    <TextView
                        android:id="@+id/tv_3"
                        android:layout_width="170dp"
                        android:layout_height="wrap_content"
                        android:text="zsdasdasd"
                        android:gravity="center"
                        android:textSize="16sp"
                        android:textColor="@color/white"
                        android:layout_gravity="center"/>

                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:id="@+id/card_4"
                    android:layout_width="180dp"
                    android:layout_height="60dp"
                    app:cardCornerRadius="20dp"
                    android:visibility="gone"
                    android:backgroundTint="@color/bg"
                    >

                    <TextView
                        android:id="@+id/tv_4"
                        android:layout_width="170dp"
                        android:layout_height="wrap_content"
                        android:text="zsdasdasd"
                        android:textSize="16sp"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:layout_gravity="center"/>

                </androidx.cardview.widget.CardView>




            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/linear1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_margin="20dp"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_5"
                    android:layout_width="180dp"
                    android:layout_height="60dp"
                    app:cardCornerRadius="20dp"
                    android:background="@color/card_bg"
                    android:layout_marginEnd="20dp"
                    android:visibility="gone"
                    android:backgroundTint="@color/bg"

                    >

                    <TextView
                        android:id="@+id/tv_5"
                        android:layout_width="170dp"
                        android:layout_height="wrap_content"
                        android:text="zsdasdasd"
                        android:gravity="center"
                        android:textSize="16sp"
                        android:textColor="@color/white"
                        android:layout_gravity="center"/>

                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:id="@+id/card_6"
                    android:layout_width="180dp"
                    android:layout_height="60dp"
                    app:cardCornerRadius="20dp"
                    android:visibility="gone"
                    android:backgroundTint="@color/bg"
                    >

                    <TextView
                        android:id="@+id/tv_6"
                        android:layout_width="170dp"
                        android:layout_height="wrap_content"
                        android:text="zsdasdasd"
                        android:textSize="16sp"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:layout_gravity="center"/>

                </androidx.cardview.widget.CardView>




            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_restart"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginBottom="40dp"
                android:text="@string/restart"
                android:layout_marginHorizontal="40dp"
                app:cornerRadius="30dp"
                android:textAllCaps="false"
                android:textSize="20sp"
                android:backgroundTint="@color/card_bg"

                />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_home"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            app:layout_constraintTop_toBottomOf="@id/const_1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="40dp"
            android:text="@string/home"
            android:layout_marginHorizontal="40dp"
            app:cornerRadius="30dp"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:backgroundTint="@color/card_bg"

            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>